update nextflow_schema and base.config to support latest dorado

--- a/base.config
+++ b/base.config
@@ -1,8 +1,8 @@
 params {
     out_dir = "output"
     wf {
-        basecaller_container = "ontresearch/dorado"
-        container_sha_basecalling = "sha268dcb4cd02093e75cdc58821f8b93719c4255ed"
+        basecaller_container = "docker.io/bunop/dorado"
+        container_sha_basecalling = "v1.0.0-cuda12.8.0"
         bonito_container = "ontresearch/bonito"
         bonito_sha = "shaea43ca2333f91fa78a823f640ba158e4268f1f98"
         common_sha = "sha1c69fd30053aad5d516e9567b3944384325a0fee"
@@ -72,7 +72,7 @@ profiles {
                 container = "${params.aws_image_prefix}-wf-common:${params.wf.common_sha}"
             }
             shell = ['/bin/bash', '-euo', 'pipefail']
-            
+
             // lift limit on simultaneous gpu jobs for cloud
             // and ensure that the host mounts relevant driver bobbins inside the container
             withLabel:gpu {
@@ -113,6 +113,11 @@ report {
 trace {
   enabled = true
   file = "${params.out_dir}/execution/trace.txt"
+  overwrite = true
+}
+dag {
+  enabled = true
+  file = "${params.out_dir}/execution/dag.svg"
   overwrite = true
 }
 
